<resources>
    <string name="app_name">MoviesApp</string>
    <string name="list_fragment_title">Movies List</string>
    <string name="get_movies">Get Movies List</string>

    <string name="title_lbl">Title</string>
    <string name="director_lbl">Director</string>
    <string name="gender_lbl">Gender</string>
    <string name="year_lbl">Year</string>

    <string name="sample_text">sdvsddsvsdv</string>
    <!-- String to select data sourced provided by factory -->
    <string name="provider_selected">Database</string>
</resources>
