<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout1">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorlayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        app:expandedTitleMarginStart="70dp">

        <android.support.design.widget.AppBarLayout
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_width="fill_parent"
            android:layout_height="230dp">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/CollapsingToolbarLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:background="@drawable/movie_default">

                <!--<android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar1"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    android:background="?attr/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />-->

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/accent_material_light">


                <TextView
                    android:id="@+id/titleLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:text="@string/title_lbl"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:layout_toEndOf="@+id/titleLbl"
                    android:layout_toRightOf="@+id/titleLbl"
                    android:text="test text"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/directorLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titleLbl"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:text="@string/director_lbl"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:layout_toRightOf="@+id/directorLbl"
                    android:text="test text"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/yearLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/directorLbl"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:text="@string/year_lbl"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/director"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:layout_toRightOf="@+id/yearLbl"
                    android:text="test text"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/genderLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/yearLbl"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:text="@string/gender_lbl"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/year"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:layout_toRightOf="@+id/genderLbl"
                    android:text="test text"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/textView2"
                    android:layout_below="@+id/genderLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_ten"
                    android:text="@string/sample_text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>